--- a/public/scss/_component-nav.scss
+++ b/public/scss/_component-nav.scss
@@ -1,7 +1,3 @@
-$link-color: white;
-$link-font:  'Times New Roman', Times, serif;
-
-
 nav {
     position: fixed;
     top: 0;
@@ -12,17 +8,18 @@ nav {
     #nav-menu-icon {
 
         width: 100%;
-        height: 3.5em;
-        padding: 0.3em 0.8em;
+        height: 3.5rem;
+        padding: 0.3rem 0.8rem;
         background-color: $primary-color;
         box-shadow: $component-shadow;
-    
+        border-bottom: 0.01rem solid $neutral-color;
+
         .nav-menu-hash {
-            width: 3.5em;
-            height: 0.5em;
-            margin: 0.35em 0em;
+            width: 3.5rem;
+            height: 0.5rem;
+            margin: 0.35rem 0;
             background-color: $secondary-color;
-            border-radius: 0.3em;
+            border-radius: 0.3rem;
         }
     }
 
@@ -31,29 +28,32 @@ nav {
         list-style-type: none;        
         margin: 0;
         padding: 0;
-        width: 16em;
+        width: 16rem;
         background-color: $primary-color;
         box-shadow: $component-shadow;
 
         li a {
             display: block;
             margin: 0;
-            padding: 1em 0;
+            padding: 1rem 0;
             text-decoration: none;
             text-align: center;
-            color: $link-color; 
-            font-family: $link-font;
-            font-weight: $link-weight-normal;         
+            color: $nav-link-color;
+            font-family: $nav-link-font-family;
+            font-weight: $nav-link-weight-normal;
+            font-size: $nav-link-font-size;
+            border-bottom: 0.01rem solid $neutral-color;
         }
         
-        a:hover {
+        li a:hover {
             background-color: $secondary-color;
-            font-weight: $link-weight-bold;
+            font-weight: $nav-link-weight-bold;
         }
     }
 
     .menu-display {
         display: block;
+        transition: display 15s;
     }
 }
 
