--- a/public/scss/_component-social.scss
+++ b/public/scss/_component-social.scss
@@ -1,11 +1,11 @@
 #social {
     position: fixed;
-    bottom: 1em;
-    right: 1em;
+    bottom: 3rem;
+    right: 1rem;
     background-color: $secondary-color;
-    border-radius: 1em;
+    border-radius: 1rem;
     box-shadow: $component-shadow;
-    padding: 0.2em 0;
+    padding: 0.2rem 0;
 
     a {
         text-decoration: none;
@@ -13,11 +13,11 @@
     }
 
     .img-social {
-        height: 1.5em;
-        width: 1.5em;
-        margin: 0 0.7em;
+        height: 1.5rem;
+        width: 1.5rem;
+        margin: 0 0.7rem;
         padding: 0;
-        border-radius: 0.75em;
+        border-radius: 0.75rem;
     }
 
     // .img-social:hover {
