--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -2,108 +2,82 @@
 @import "component-nav";
 @import "component-form";
 @import "component-social";
-;
+
+body{
+    background: center no-repeat url(/public/img/federico_respini_395x675.webp);
+    background-attachment: fixed;
+}
+
+nav{
+
+    #nav-menu-list{
+        border-bottom-right-radius: 0.3rem;
+    }
+
+    ul li a {
+        border-top:  0.01rem solid $neutral-color;
+        border-bottom: none;
+    }
+}
 
 #section-profile, #section-training, #section-contact {
-    padding-bottom: 4em;
+    padding-bottom: 4rem;
 
     h2 {
-        margin-bottom: 3em;
+        margin: 4rem 0;
     }
 }
 
 #section-profile {
     text-align: center;
-    background-color: $primary-color-light;
+    // background-color: $primary-color-light;
 
     #profile-top{
-        margin-bottom: 2em;
+        margin-bottom: 2rem;
+
+        h1{
+            margin-bottom: 2.5rem;
+        }
     }
 
     .img-profile {
-        height: 8em;
-        width: 8em;
-        margin-bottom: 2em;
-        border-radius: 4em;
+        height: 8rem;
+        width: 8rem;
+        margin-bottom: 2.5rem;
+        border-radius: 4rem;
         box-shadow: $shadow-light-big;
     }
     
     .skill-icon {
-        margin: 0.8em 0.70em;
-        background-color: $neutral-color;
-        border-radius: 0.5em;
-        box-shadow: $shadow-neutral-small;        
+        margin: 0.8rem 0.70rem;
+        border-radius: 3rem;
+        box-shadow: $shadow-dark-big;
     }
 
     .img-skill-icon {
         display: block;
-        height: 2.5em;
-        width: 2.5em;
-        border-radius: 0.5em;
+        height: 2.5rem;
+        width: 2.5rem;
+        border-radius: 0.5rem;
     }
 
-    .img-skill-icon:hover {
-        box-shadow: $shadow-neutral-big; 
+    .skill-icon:hover, .skill-icon:focus {
+        box-shadow: $shadow-light-big; 
         transition: box-shadow 0.15s ease-in-out;
     }
 }
 
 #section-training {
-    background-image: linear-gradient(180deg, $primary-color-light, $neutral-color, $neutral-color);
+    // background-image: linear-gradient(180deg, $primary-color-light, $neutral-color, $neutral-color);
 
     .training-text-block {
-        margin-bottom: 1.5em;
+        margin-bottom: 1.5rem;
         text-align: center;
 
         p {
-            margin: 0.35em;
+            margin: 0.35rem;
         }
     }
 }
 
-#section-contact {
-    padding-bottom: 0;
-}
-
-
-#slide-img{
-    position: relative;
-    height: 5em;
-    width: 100%;
-    overflow: hidden;
-
-    #slide-img-left {
-        position: absolute;
-        display: inline-block;
-        margin: 0;
-        padding: 0;
-        height: 5em;
-        width: 100%;
-        // bottom: 0;
-        left: 0;
-        z-index: -1;
-        transform: skew(76deg);
-        border-right: 15em solid transparent;
-        border-bottom: 10em solid $primary-color-dark;
-    }
-
-    #slide-img-right {
-        position: absolute;
-        display: inline-block;
-        margin: 0;
-        padding: 0;
-        height: 5em;
-        width: 85%;
-        top: 0;
-        right: 0;
-        z-index: -2;
-        transform: skew(-72deg);
-        border-left: 15em solid transparent;
-        border-bottom: 10em solid $secondary-color-dark;
-    }
-}
-
-
-// @media screen and (min-width: 700px){
-
-// }
+@import "media-700-above";
