--- a/public/scss/_component-nav.scss
+++ b/public/scss/_component-nav.scss
@@ -1,63 +1,118 @@
 nav {
     position: fixed;
+    width: 100%;
     top: 0;
     margin: 0;
     padding: 0;
-    width: 100%;
+    z-index: 5;
 
-    #nav-menu-icon {
-
-        width: 100%;
+    #navbar-menu{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
         height: 3.5rem;
-        padding: 0.3rem 0.8rem;
-        background-color: $primary-color;
+        background-color: $color-primary-normal;
         box-shadow: $component-shadow;
-        border-bottom: 0.01rem solid $neutral-color;
+        border-bottom: 0.01rem solid $color-neutral-normal; 
 
-        .nav-menu-hash {
-            width: 3.5rem;
-            height: 0.5rem;
-            margin: 0.35rem 0;
-            background-color: $secondary-color;
-            border-radius: 0.3rem;
+        #navbar-icon {
+            position: fixed;        
+            top: 0;
+            left: 0;
+            height: 3rem;
+            margin-top: 0.13rem;
+            // padding: 0.35rem 0.8rem;
+    
+            .burger {
+                width: 3rem;
+                height: 0.5rem;
+                margin: 0.45rem 0.5rem;
+                background-color: $color-secondary-dark;
+                border-radius: 0.3rem;
+            }       
         }
+
+        .icon-spin{
+            transform: rotate(90deg);
+        }     
+
+        .img-brand{
+            display: inline-block;
+            height: 2.5rem;
+            width: 2.5rem;
+            margin: 0 auto;
+        }        
     }
 
-    ul {
-        display: none;
+    #navbar-list {
+        // display: none;
         list-style-type: none;        
         margin: 0;
         padding: 0;
-        width: 16rem;
-        background-color: $primary-color;
+        background-color: $color-primary-normal;
         box-shadow: $component-shadow;
+        width: 16rem;
 
         li a {
             display: block;
-            margin: 0;
+            margin: 0;         
             padding: 1rem 0;
             text-decoration: none;
             text-align: center;
             color: $nav-link-color;
             font-family: $nav-link-font-family;
-            font-weight: $nav-link-weight-normal;
+            font-weight: $nav-link-weight-bold;
             font-size: $nav-link-font-size;
-            border-bottom: 0.01rem solid $neutral-color;
+            border-bottom: 0.01rem solid $color-neutral-normal;
         }
         
         li a:hover {
-            background-color: $secondary-color;
-            font-weight: $nav-link-weight-bold;
+            background-color: $color-secondary-normal;
+            text-shadow: $shadow-light-big;
+        }
+
+        li a:focus {
+            background-color: $color-secondary-normal;
+            text-shadow: $shadow-light-big;
         }
     }
 
     .menu-display {
-        display: block;
-        transition: display 15s;
+        display: none;
     }
 }
 
+@media screen and (min-width: 720px){
 
-@media screen and (min-width: 700px){
+    nav{
+        display: flex;
+        justify-content: center;
 
+        #navbar-menu {
+            display: none;
+        }
+
+        #navbar-list {
+            display: contents;
+
+            li {
+                display: inline-block;
+
+                a {
+                    display: block;
+                    margin: 0 1.5rem;
+                    border: none;
+                }
+            }
+
+            li a:hover {
+                background-color: transparent;
+            }
+
+            li a:focus {
+                background-color: transparent;
+            }
+        }
+    }
 }
