--- a/public/scss/_component-social.scss
+++ b/public/scss/_component-social.scss
@@ -1,11 +1,10 @@
 #social {
-    position: fixed;
-    bottom: 3rem;
-    right: 1rem;
-    background-color: $secondary-color;
-    border-radius: 1rem;
+    position: fixed;    
+    background-color: $color-primary-normal;
+    border-radius: 0.5rem;
     box-shadow: $component-shadow;
     padding: 0.2rem 0;
+    z-index: 4;
 
     a {
         text-decoration: none;
@@ -13,22 +12,27 @@
     }
 
     .img-social {
-        height: 1.5rem;
-        width: 1.5rem;
-        margin: 0 0.7rem;
+        height: 1.6rem;
+        width: 1.6rem;
+        margin: 0 0.50rem;
         padding: 0;
         border-radius: 0.75rem;
     }
-
-    // .img-social:hover {
-    //     box-shadow: 0.02em 0.02em 1em white;
-    // }
 }
 
-// #section-social:hover {
-//     box-shadow: 0.02em 0.02em 1em white;
-// }
+.social-position{
+    bottom: 2.70rem;
+    right: 0.75rem;
+}
 
-// @media screen and (min-width: 700px){
+.img-social:hover {
+    box-shadow: $shadow-light-big;
+}
 
-// }
+@media screen and (min-width: 700px){
+    .social-position{
+        bottom: 3.6rem;
+        right: 2rem;
+    }
+    
+}
