--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1,53 +1,101 @@
+// styles: .body-overlay = -2
+
 @import "utility";
 @import "component-nav";
 @import "component-form";
 @import "component-social";
 
-body{
-    background: center no-repeat url(/public/img/federico_respini_395x675.webp);
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+    display: block;
+    margin: 0;
+    font-family: $heading-font;
+    font-weight: $heading-weight;
+    color: $color-secondary-dark;
+    text-shadow: $shadow-light-outline;
+}
+
+h1, .h1 { font-size: 2em; }
+h2, .h2 { font-size: 1.6em; } 
+h3, .h3 { font-size: 1.35em; }
+h4, .h4 { font-size: 1.15em; }
+h5, .h5 { font-size: 1em; }
+h6, .h6 { font-size: 0.9em; }
+
+body {
+    margin: 0;
+    padding-top: 3.4rem;
+    font-size: $default-font-size;
+    font-family: $text-font-family;
+    color: $color-primary-light;
+    // Photo by Federico Respini on Unsplash
+    background: center no-repeat url(/public/img/backgrounds/federico_respini_395x675.webp);
     background-attachment: fixed;
+    background-size: cover;
 }
 
-nav{
-
-    #nav-menu-list{
-        border-bottom-right-radius: 0.3rem;
-    }
-
-    ul li a {
-        border-top:  0.01rem solid $neutral-color;
-        border-bottom: none;
+nav {
+    
+    #navbar-list {
+        
+        li a {
+            padding: 0.3rem;
+        }
     }
 }
 
-#section-profile, #section-training, #section-contact {
-    padding-bottom: 4rem;
+section {
+    padding: 3.3rem 1rem;
+}
 
-    h2 {
-        margin: 4rem 0;
+footer {
+    margin: 0;
+    padding: 1rem;
+    background-color: $color-primary-normal;
+    text-align: center;
+    font-size: $text-font-size-small;
+    color: $color-neutral-normal;
+
+    p, span {
+        margin: 0;
+        padding: 0;
     }
+}
+
+.body-overlay{
+    position: fixed;
+    top: 0;
+    padding: 3.5rem 1rem 2rem 1rem;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.25);
+    z-index: -2; 
 }
 
 #section-profile {
     text-align: center;
-    // background-color: $primary-color-light;
-
-    #profile-top{
-        margin-bottom: 2rem;
-
-        h1{
-            margin-bottom: 2.5rem;
-        }
-    }
 
     .img-profile {
         height: 8rem;
         width: 8rem;
-        margin-bottom: 2.5rem;
+        margin: 2.5rem;
         border-radius: 4rem;
         box-shadow: $shadow-light-big;
     }
-    
+}
+
+#skill-icons{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    margin: 2rem auto 0 auto;
+    max-width: 18rem;
+
     .skill-icon {
         margin: 0.8rem 0.70rem;
         border-radius: 3rem;
@@ -62,22 +110,50 @@ nav{
     }
 
     .skill-icon:hover, .skill-icon:focus {
-        box-shadow: $shadow-light-big; 
-        transition: box-shadow 0.15s ease-in-out;
+        box-shadow: $shadow-light-big;
+        transition: box-shadow 0.20s ease-in-out;
     }
 }
 
 #section-training {
-    // background-image: linear-gradient(180deg, $primary-color-light, $neutral-color, $neutral-color);
 
-    .training-text-block {
-        margin-bottom: 1.5rem;
+    h2 {
+        margin-bottom: 4rem;
+    }
+    
+    .training-text-block{
+        margin-bottom: 2rem;
         text-align: center;
 
-        p {
-            margin: 0.35rem;
+        div {
+            margin-bottom: 0.5rem;
         }
     }
 }
 
-@import "media-700-above";
+#section-contact {
+    padding-bottom: 0;
+
+    h2 {
+        margin-bottom: 4rem;
+    }
+}
+
+@media only screen and (min-width: 454px) {
+    
+    body {
+        // Photo by Federico Respini on Unsplash
+        background: center no-repeat url(/public/img/backgrounds/federico_respini_700x675.webp);
+        background-attachment: fixed;
+        background-size: cover;
+    }
+
+    section {
+        padding: 3.3rem 2rem;
+    }
+ 
+
+}
+
+@import "media-800-desktop";
+@import "media-1280-xl-desktop";
