--- a/public/scss/_media-1280-xl-desktop.scss
+++ b/public/scss/_media-1280-xl-desktop.scss
@@ -2,7 +2,7 @@
 
     body {
         // Photo by Federico Respini on Unsplash
-        background: center no-repeat url(/public/img/backgrounds/federico_respini_5923x3332.webp);
+        background: center no-repeat url(../img/backgrounds/federico_respini_5923x3332.webp);
         background-attachment: fixed;
         background-size: cover;
         font-size: 20px;
