--- a/public/scss/_media-800-desktop.scss
+++ b/public/scss/_media-800-desktop.scss
@@ -42,6 +42,10 @@
 
 @media only screen and (min-width: 1024px){
 
+    .body-overlay {
+        min-height: 672px;
+    }
+
     .border {
         position: relative;
         border: 0.15rem double $color-secondary-light;
