--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -11,21 +11,9 @@
     padding: 0;
 }
 
-h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
-    display: block;
-    margin: 0;
-    font-family: $heading-font;
-    font-weight: $heading-weight;
-    color: $color-secondary-dark;
-    text-shadow: $shadow-light-outline;
+html {
+    scroll-behavior: smooth;
 }
-
-h1, .h1 { font-size: 2em; }
-h2, .h2 { font-size: 1.6em; } 
-h3, .h3 { font-size: 1.35em; }
-h4, .h4 { font-size: 1.15em; }
-h5, .h5 { font-size: 1em; }
-h6, .h6 { font-size: 0.9em; }
 
 body {
     margin: 0;
@@ -66,6 +54,22 @@ footer {
         padding: 0;
     }
 }
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+    display: block;
+    margin: 0;
+    font-family: $heading-font;
+    font-weight: $heading-weight;
+    color: $color-secondary-dark;
+    text-shadow: $shadow-light-outline;
+}
+
+h1, .h1 { font-size: 2em; }
+h2, .h2 { font-size: 1.6em; } 
+h3, .h3 { font-size: 1.35em; }
+h4, .h4 { font-size: 1.15em; }
+h5, .h5 { font-size: 1em; }
+h6, .h6 { font-size: 0.9em; }
 
 .body-overlay{
     position: fixed;
