--- a/public/scss/_component-form.scss
+++ b/public/scss/_component-form.scss
@@ -1,92 +1,89 @@
-$input-border-light:  0.1rem solid $color-primary-normal;
-$input-border-dark:  0.15rem solid $color-primary-dark;
+$input-border-light: 0.1rem solid $color-primary;
+$input-border-dark: 0.15rem solid $color-secondary;
 
 form {
-    padding: 1rem;
-    margin: 0 auto;
+  padding: 1rem;
+  margin: 0 auto;
 
-    label {
-        display: block;
-    }
+  label {
+    display: block;
+  }
 
-    input, textarea {
-        margin: 1rem 0;
-        padding: 0.5rem 1rem;
-        border: $input-border-dark;
-        border-radius: 0.3rem;
-        background-color: $color-secondary-light;
-        color: $color-secondary-dark;
-        font-weight: $text-weight-bold;
-        cursor: pointer;
-        transition: border 0.5s, box-shadow 0.5s;
-    }
+  input,
+  textarea {
+    margin: 1rem 0;
+    padding: 0.5rem 1rem;
+    border: $input-border-dark;
+    border-radius: 0.3rem;
+    background-color: $color-accent;
+    color: $color-dark;
+    font-weight: $text-weight-bold;
+    cursor: pointer;
+    transition: border 0.5s, box-shadow 0.5s;
+  }
 
-    input[type=text], input[type=email] {
-        width: 100%;
-    }
+  input[type="text"],
+  input[type="email"] {
+    width: 100%;
+  }
 
-    textarea {
-        width: 100%;
-        height: 6rem;
-    }
+  textarea {
+    width: 100%;
+    height: 6rem;
+  }
 
-    input:hover, textarea:hover {
-        border: $input-border-light;
-        box-shadow: $shadow-neutral-big;
-        outline: none;
-    }
+  input:hover,
+  textarea:hover {
+    border: $input-border-light;
+    box-shadow: $shadow;
+    outline: none;
+  }
 
-    input:focus, textarea:focus {
-        border: $input-border-light;
-        box-shadow: $shadow-neutral-big;
-        outline: none;
-    }
-    input[type=submit] {
-        background-color: $color-primary-dark;
-        color: $color-primary-normal;
-        border: $input-border-light;
-        width: 100%;
-    }
+  input:focus,
+  textarea:focus {
+    border: $input-border-light;
+    box-shadow: $shadow;
+    outline: none;
+  }
+  input[type="submit"] {
+    background-color: $color-secondary;
+    color: $color-primary;
+    border: $input-border-light;
+    width: 100%;
+  }
 
-    input[type=submit]:hover {
-        background-color: $color-primary-light;
-        color: $color-primary-dark;
-        border: $input-border-dark;
-    }
+  input[type="submit"]:hover {
+    background-color: $color-accent;
+    color: $color-secondary;
+    border: $input-border-dark;
+  }
 
-    input[type=submit]:focus {
-        background-color: $color-primary-light;
-        color: $color-primary-dark;
-        border: $input-border-dark;
-    }
+  input[type="submit"]:focus {
+    background-color: $color-accent;
+    color: $color-secondary;
+    border: $input-border-dark;
+  }
 
-    .form-message {
-        text-align: center;
-        margin: 1rem auto 1rem auto;
-        padding: 0.4rem;
-        border-radius: 0.3rem;
-        // border: 0.1rem solid $color-primary-dark;
-        // background-color: $color-neutral-normal;
-        color: $color-secondary-light;
-        font-weight: $text-weight-bold;
-    }
+  .form-message {
+    text-align: center;
+    margin: 1rem auto 1rem auto;
+    padding: 0.4rem;
+    border-radius: 0.3rem;
+    color: $color-accent;
+    font-weight: $text-weight-bold;
+  }
 }
 
-@media only screen and (min-width: 1024px){
-
-    form {
-
-        .input-group {
-            display: inline-block;
-            width: 49.5%;
-        }
-
-        input[type=text], input[type=email] {
-            width: 100%;
-        }
-
+@media only screen and (min-width: 1024px) {
+  form {
+    .input-group {
+      display: inline-block;
+      width: 49.5%;
     }
 
-
-
+    input[type="text"],
+    input[type="email"] {
+      width: 100%;
+    }
+  }
 }
