--- a/public/scss/_component-social.scss
+++ b/public/scss/_component-social.scss
@@ -1,38 +1,37 @@
 #social {
-    position: fixed;    
-    background-color: $color-primary-normal;
-    border-radius: 0.5rem;
-    box-shadow: $component-shadow;
-    padding: 0.2rem 0;
-    z-index: 4;
+  position: fixed;
+  background-color: $color-primary;
+  border-radius: 0.5rem;
+  box-shadow: $component-shadow;
+  padding: 0.2rem 0;
+  z-index: 4;
 
-    a {
-        text-decoration: none;
-        display: inline-block
-    }
+  a {
+    text-decoration: none;
+    display: inline-block;
+  }
 
-    .img-social {
-        height: 1.6rem;
-        width: 1.6rem;
-        margin: 0 0.50rem;
-        padding: 0;
-        border-radius: 0.75rem;
-    }
+  .img-social {
+    height: 1.6rem;
+    width: 1.6rem;
+    margin: 0 0.5rem;
+    padding: 0;
+    border-radius: 0.75rem;
+  }
 }
 
-.social-position{
-    bottom: 2.70rem;
-    right: 0.75rem;
+.social-position {
+  bottom: 2.7rem;
+  right: 0.75rem;
 }
 
 .img-social:hover {
-    box-shadow: $shadow-light-big;
+  box-shadow: $shadow;
 }
 
-@media screen and (min-width: 700px){
-    .social-position{
-        bottom: 3.6rem;
-        right: 2rem;
-    }
-    
+@media screen and (min-width: 700px) {
+  .social-position {
+    bottom: 3.6rem;
+    right: 2rem;
+  }
 }
