--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -6,157 +6,184 @@
 @import "component-social";
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    margin: 0;
-    padding-top: 3.4rem;
-    font-size: $default-font-size;
-    font-family: $text-font-family;
-    color: $color-primary-light;
-    // Photo by Federico Respini on Unsplash
-    background: center no-repeat url(../img/backgrounds/federico_respini_395x675.webp);
-    background-attachment: fixed;
-    background-size: cover;
+  margin: 0;
+  padding-top: 3.4rem;
+  font-size: $default-font-size;
+  font-family: $text-font-family;
+  color: $color-accent;
+  // Photo by Federico Respini on Unsplash
+  background: center no-repeat
+    url(../img/backgrounds/federico_respini_395x675.webp);
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-nav {
-    
-    #navbar-list {
-        
-        li a {
-            padding: 0.3rem;
-        }
-    }
-}
+// nav {
+//   #navbar-list {
+//     li a {
+//       padding: 0.3rem;
+//     }
+//   }
+// }
 
 section {
-    padding: 3.3rem 1rem;
+  padding: 3.3rem 1rem;
 }
 
 footer {
-    margin: 0;
-    padding: 1rem;
-    background-color: $color-primary-normal;
-    text-align: center;
-    font-size: $text-font-size-small;
-    color: $color-neutral-normal;
+  margin: 0;
+  padding: 1rem;
+  background-color: $color-primary;
+  text-align: center;
+  font-size: $text-font-size-small;
+  color: $color-light;
 
-    p, span {
-        margin: 0;
-        padding: 0;
-    }
+  p,
+  span {
+    margin: 0;
+    padding: 0;
+  }
 }
 
-h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
-    display: block;
-    margin: 0;
-    font-family: $heading-font;
-    font-weight: $heading-weight;
-    color: $color-secondary-dark;
-    text-shadow: $shadow-light-outline;
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
+  display: block;
+  margin: 0;
+  font-family: $heading-font;
+  font-weight: $heading-weight;
+  color: $color-secondary;
+  text-shadow: $shadow;
 }
 
-h1, .h1 { font-size: 2em; }
-h2, .h2 { font-size: 1.6em; } 
-h3, .h3 { font-size: 1.35em; }
-h4, .h4 { font-size: 1.15em; }
-h5, .h5 { font-size: 1em; }
-h6, .h6 { font-size: 0.9em; }
+h1,
+.h1 {
+  font-size: 2em;
+}
+h2,
+.h2 {
+  font-size: 1.6em;
+}
+h3,
+.h3 {
+  font-size: 1.35em;
+}
+h4,
+.h4 {
+  font-size: 1.15em;
+}
+h5,
+.h5 {
+  font-size: 1em;
+}
+h6,
+.h6 {
+  font-size: 0.9em;
+}
 
-.body-overlay{
-    position: fixed;
-    top: 0;
-    padding: 3.5rem 1rem 2rem 1rem;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.25);
-    z-index: -2; 
+.body-overlay {
+  position: fixed;
+  top: 0;
+  padding: 3.5rem 1rem 2rem 1rem;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.25);
+  z-index: -2;
 }
 
 #section-profile {
-    text-align: center;
+  text-align: center;
 
-    .img-profile {
-        height: 8rem;
-        width: 8rem;
-        margin: 2.5rem;
-        border-radius: 4rem;
-        box-shadow: $shadow-light-big;
-    }
+  .img-profile {
+    height: 8rem;
+    width: 8rem;
+    margin: 2.5rem;
+    border-radius: 4rem;
+    box-shadow: $shadow;
+  }
 }
 
-#skill-icons{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    margin: 2rem auto 0 auto;
-    max-width: 18rem;
+.skill-icons {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  margin: 2rem auto 0 auto;
+  max-width: 18rem;
 
-    .skill-icon {
-        margin: 0.8rem 0.70rem;
-        border-radius: 3rem;
-        box-shadow: $shadow-dark-big;
-    }
+  .skill-icon {
+    margin: 0.8rem 0.7rem;
+    border-radius: 3rem;
+    box-shadow: $shadow;
+  }
 
-    .img-skill-icon {
-        display: block;
-        height: 2.5rem;
-        width: 2.5rem;
-        border-radius: 0.5rem;
-    }
+  .img-skill-icon {
+    display: block;
+    height: 2.5rem;
+    width: 2.5rem;
+    border-radius: 0.5rem;
+  }
 
-    .skill-icon:hover, .skill-icon:focus {
-        box-shadow: $shadow-light-big;
-        transition: box-shadow 0.20s ease-in-out;
-    }
+  .skill-icon:hover,
+  .skill-icon:focus {
+    box-shadow: $shadow;
+    transition: box-shadow 0.2s ease-in-out;
+  }
 }
 
 #section-training {
+  h2 {
+    margin-bottom: 4rem;
+  }
 
-    h2 {
-        margin-bottom: 4rem;
-    }
-    
-    .training-text-block{
-        margin-bottom: 2rem;
-        text-align: center;
+  .training-text-block {
+    margin-bottom: 2rem;
+    text-align: center;
 
-        div {
-            margin-bottom: 0.5rem;
-        }
+    div {
+      margin-bottom: 0.5rem;
     }
+  }
 }
 
 #section-contact {
-    padding-bottom: 0;
+  padding-bottom: 0;
 
-    h2 {
-        margin-bottom: 4rem;
-    }
+  h2 {
+    margin-bottom: 4rem;
+  }
 }
 
 @media only screen and (min-width: 454px) {
-    
-    body {
-        // Photo by Federico Respini on Unsplash
-        background: center no-repeat url(../img/backgrounds/federico_respini_700x675.webp);
-        background-attachment: fixed;
-        background-size: cover;
-    }
+  body {
+    // Photo by Federico Respini on Unsplash
+    background: center no-repeat
+      url(../img/backgrounds/federico_respini_700x675.webp);
+    background-attachment: fixed;
+    background-size: cover;
+  }
 
-    section {
-        padding: 3.3rem 2rem;
-    }
- 
-
+  section {
+    padding: 3.3rem 2rem;
+  }
 }
 
 @import "media-800-desktop";
